有料化に向けての文言やコンテンツの修正、追加

--- a/app/assets/stylesheets/atoms/_form.sass
+++ b/app/assets/stylesheets/atoms/_form.sass
@@ -130,6 +130,8 @@ textarea.a-sm-text-input
   margin-top: .5em
   &.is-text-align-right
     text-align: right
+  [class*=a-button] + &
+    margin-top: 1em
   p
     +text-block(1em 1.5 0 1em)
   a
