--- a/app/views/current_user/edit.html.slim
+++ b/app/views/current_user/edit.html.slim
@@ -16,7 +16,7 @@ header.page-header
     nav.auth-form-nav
       ul.auth-form-nav__items
         li.auth-form-nav__item
-           span.auth-form-nav__item-link.js-modal(data-target="#nda-modal")
-            | 秘密保持契約内容を確認
+           span.auth-form-nav__item-link
+            | 利用規約を確認
         li.auth-form-nav__item
            = link_to "退会手続きへ進む", new_user_retirement_path(@user), class: "auth-form-nav__item-link test-fixed-bottom"
