--- a/app/views/welcome/_conditions.slim
+++ b/app/views/welcome/_conditions.slim
@@ -1,7 +1,7 @@
 section.welcome-child-section.is-conditions
   .welcome-small-sections.is-conditions
     h3.welcome-small-sections__title
-      = image_tag("warning.svg", class: "welcome-small-sections__title-icon")
+      = image_tag("warning.svg", alt: "注意！", class: "welcome-small-sections__title-icon")
       | ただし、以下の条件があります！！
     .row.is-gutter-width-32
       .col-xs-12.col-md-4
