--- a/app/views/welcome/_pricing.html.slim
+++ b/app/views/welcome/_pricing.html.slim
@@ -2,8 +2,13 @@ section.welcome-section.is-pricing#pricing
   .container
     h2.welcome-section__title
       = image_tag("pricing-title.svg", alt: "料金", class: "welcome-section__title-image")
-    h3.welcome-section__sub-title
-      | 月額 29,800 円
+    h3.welcome-section__price.is-index
+      .welcome-section__price-period
+        | 月額
+      .welcome-section__price-number
+        | 29,800
+      .welcome-section__price-unit
+        | 円
     .welcome-section__actions
       .welcome-section__actions-items
         .welcome-section__actions-item
