--- a/app/assets/stylesheets/welcome/_welcome-footer.sass
+++ b/app/assets/stylesheets/welcome/_welcome-footer.sass
@@ -1,5 +1,36 @@
 .welcome-footer
-  +padding(vertical, 3rem)
+  +media-breakpoint-up(md)
+    +padding(vertical, 3rem)
+  +media-breakpoint-down(sm)
+    padding-bottom: 1.5rem
+    body.welcome & .container
+      +padding(horizontal, 0)
+
+
+.welcome-footer__nav
+  margin-bottom: 1.5rem
+
+.welcome-footer__nav-items
+  +media-breakpoint-up(md)
+    display: flex
+    justify-content: center
+
+
+.welcome-footer__nav-item
+  +media-breakpoint-up(md)
+    +padding(horizontal, .5rem)
+
+.welcome-footer__nav-item-link
+  +text-block(.875rem 1, $default-text)
+  +media-breakpoint-up(md)
+    +hover-link
+  +media-breakpoint-down(sm)
+    text-decoration: none
+    display: flex
+    align-items: center
+    +padding(horizontal, 1rem)
+    border-bottom: solid 1px $border
+    +size(100% 2.75rem)
 
 .welcome-footer-copyright
   justify-content: center
