--- a/app/assets/stylesheets/welcome/_welcome-page-header.sass
+++ b/app/assets/stylesheets/welcome/_welcome-page-header.sass
@@ -1,6 +1,12 @@
 .welcome-page-header
   background-color: #178bff
-  +padding(vertical, 1.125rem)
+  +media-breakpoint-up(md)
+    +padding(vertical, 1.125rem)
+  +media-breakpoint-down(sm)
+    +padding(vertical, .875rem)
 
 .welcome-page-header__title-image
-  +size(20rem auto)
+  +media-breakpoint-up(md)
+    +size(20rem auto)
+  +media-breakpoint-down(sm)
+    +size(14rem auto)
