--- a/app/views/layouts/welcome.html.slim
+++ b/app/views/layouts/welcome.html.slim
@@ -13,6 +13,7 @@ html.is-application lang="ja"
     - if page_classes.include?("welcome-home")
       link(rel="canonical" href="https://bootcamp.fjord.jp/")
     = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Roboto+Mono:500", media: "all"
+    = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Lato:900", media: "all"
     = stylesheet_link_tag "https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:900", media: "all"
     = stylesheet_link_tag "https://fonts.googleapis.com/css?family=Source+Code+Pro", media: "all"
     = stylesheet_link_tag "https://cdn.jsdelivr.net/npm/yakuhanjp@3.2.0/dist/css/yakuhanjp-narrow.min.css", media: "all"
