--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -13,4 +13,4 @@
           = link_to "トップページ", welcome_path, class: "auth-form-nav__item-link"
         - if @user.adviser? || params[:training]
           li.auth-form-nav__item
-             span.auth-form-nav__item-link.js-modal(data-target="#nda-modal") 秘密保持契約内容を確認
+             span.auth-form-nav__item-link 利用規約を確認
