--- a/app/views/welcome/_eligibility.slim
+++ b/app/views/welcome/_eligibility.slim
@@ -2,5 +2,7 @@ section.welcome-section.is-eligibility.is-wood#eligibility
   .container
     h2.welcome-section__title
       = image_tag("eligibility-title.svg", alt: "参加資格と参加条件", class: "welcome-section__title-image")
+    h3.welcome-section__sub-title
+      | 基本的に誰でもOK
     = render "welcome/unlimited"
     = render "welcome/conditions"
