--- a/app/views/welcome/_form.slim
+++ b/app/views/welcome/_form.slim
@@ -2,6 +2,6 @@ section.welcome-actions
   .container
     .welcome-actions__items
       .welcome-actions__item
-        = link_to "お問い合わせ・質問", new_user_path, class: "a-welcome-button"
+        = link_to "お問い合わせ・質問", new_inquiry_path, class: "a-welcome-button"
       .welcome-actions__item
         = link_to "参加登録", new_user_path, class: "a-welcome-button is-signup"
