--- a/app/views/articles/show.html.slim
+++ b/app/views/articles/show.html.slim
@@ -4,7 +4,7 @@ notice = @notice
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       .page-header__title
         = @article.title
       .page-header-actions
