--- a/app/views/card/_form.html.slim
+++ b/app/views/card/_form.html.slim
@@ -4,9 +4,9 @@
   .auth-form-items
     .auth-form-item
       label.a-label(for="card-element") カード番号
-      #card-element
+      #card-element.a-text-input
       #card-errors(role="alert")
   .auth-form-action
     ul.auth-form-action__items
       li.auth-form-action__item
-        button.is-button-simple-lg-warning 登録
+        button.a-button.is-lg.is-warning.is-block カードを登録
