--- a/app/views/user_mailer/_student.html.erb
+++ b/app/views/user_mailer/_student.html.erb
@@ -3,11 +3,10 @@
   フィヨルドブートキャンプの駒形と申します。<br>
   フィヨルドブートキャンプにお申し込みありがとうございます。
 </p>
-<p>今日からフィヨルドブートキャンプスタートになります。</p>
 <p>下のリンクをクリックし、申込時に設定したユーザー名、パスワードを使ってフィヨルドブートキャンプにログインしてください。</p>
 <p>
-  ログイン後、まずクレジットカードの登録をお願い致します。クレジットカードの登録後3日間はお試し期間となりますのでその間に退会されれば課金されることはございません。<br>
+  ログイン後、まずはクレジットカードの登録をお願いいたします。クレジットカード登録後にフィヨルドブートキャンプスタートになります。クレジットカード登録後の3日間はお試し期間となりますので、その間に退会されれば課金されることはございません。<br>
   （クレジットカード関連で問題がありましたら<%= link_to "info@fjord.jp", "mailto:info@fjord.jp" %>までメールにてお伝え下さい。）
 </p>
-<p>その後でナビゲーションにある「プラクティス」のページへ行き、上から順番にプラクティス（フィヨルドブートキャンプでは、課題をプラクティスと呼んでいます）を進めていってください。</p>
+<p>クレジットカード登録後、左のナビゲーションにある「プラクティス」のページへ行き、上から順番にプラクティス（フィヨルドブートキャンプでは、課題をプラクティスと呼んでいます）を進めていってください。</p>
 <p>「プラクティス」の途中にチャットルームに入る、というものがあり、それ以降はチャットにて質問をお願いしますが、その前で何か質問がありましたら、<%= link_to "komagata@fjord.jp", "mailto:komagata@fjord.jp" %> までメールにてご質問ください。</p>
