--- a/app/views/application/_global_nav.slim
+++ b/app/views/application/_global_nav.slim
@@ -14,11 +14,12 @@ nav.global-nav
             .global-nav-links__link-icon
               i.fas.fa-bullhorn
             .global-nav-links__link-label お知らせ
-        li.global-nav-links__item
-          = link_to articles_path, class: "global-nav-links__link #{current_link /^articles/}" do
-            .global-nav-links__link-icon
-              i.fas.fa-newspaper
-            .global-nav-links__link-label ブログ
+        //
+          li.global-nav-links__item
+            = link_to articles_path, class: "global-nav-links__link #{current_link /^articles/}" do
+              .global-nav-links__link-icon
+                i.fas.fa-newspaper
+              .global-nav-links__link-label ブログ
         li.global-nav-links__item
           = link_to course_practices_path(current_user.course), class: "global-nav-links__link #{current_link /^(courses-practices|practices)-/}" do
             .global-nav-links__link-icon
@@ -91,3 +92,8 @@ nav.global-nav
             .global-nav-links__link-icon
               i.fas.fa-sign-out-alt
             .global-nav-links__link-label サインアウト
+        li.global-nav-links__item.is-hidden-md-up
+          = link_to new_user_retirement_path(current_user), class: "global-nav-links__link" do
+            .global-nav-links__link-icon
+              i.fas.fa-sad-tear
+            .global-nav-links__link-label 退会手続き
