--- a/app/views/articles/_form.html.slim
+++ b/app/views/articles/_form.html.slim
@@ -27,9 +27,9 @@
   .form-actions
     ul.form-actions__items
       li.form-actions__item
-        = f.submit nil, class: "is-button-simple-md-secondary", id: "js-shortcut-submit"
+        = f.submit nil, class: "a-button is-lg is-warning is-block", id: "js-shortcut-submit"
       li.form-actions__item
         - if params[:action] == "new" || params[:action] == "create"
-          = link_to "キャンセル", articles_path, class: "is-button-simple-md-secondary"
+          = link_to "キャンセル", articles_path, class: "a-button is-md is-secondary is-block"
         - elsif params[:action] == "edit" || params[:action] == "update"
-          = link_to "キャンセル", article_path, class: "is-button-simple-md-secondary"
+          = link_to "キャンセル", article_path, class: "a-button is-md is-secondary is-block"
