--- a/app/views/articles/edit.html.slim
+++ b/app/views/articles/edit.html.slim
@@ -3,7 +3,7 @@
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title = title
 
 .page-body
