--- a/app/views/articles/new.html.slim
+++ b/app/views/articles/new.html.slim
@@ -3,13 +3,12 @@
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title = title
       .page-header-actions
         .page-header-actions__items
           .page-header-actions__item
-            = link_to articles_path, class: "is-button-simple-md-secondary" do
-              i.fas.fa-angle-left
+            = link_to articles_path, class: "a-button is-md is-secondary is-block" do
               | ブログ記事一覧へ
 
 .page-body
