--- a/app/views/card/_notice.html.slim
+++ b/app/views/card/_notice.html.slim
@@ -1,4 +1,14 @@
-.a-card-notice
-  p フィヨルドブートキャンプを利用するには有効なクレジットカードを登録してください。
-  p 登録して3日間はお試し期間です。3日以内に退会すれば課金されることはありません。
-  p クレジットカードに関して問題があれば#{mail_to "info@fjord.jp"}までお問い合わせください。
+.form-notice
+  - unless current_user.card
+    p
+      | クレジットカード登録後、すぐにフィヨルドブートキャンプ利用開始になります。
+  p
+    | クレジットカード登録日を含む3日間はお試し期間です。お試し期間の間に退会をすれば課金されることはありません（
+    = link_to "退会はこちらから", new_user_retirement_path(current_user)
+    | ）。
+  p
+    | クレジットカードに関して問題がありましたら #{mail_to "info@fjord.jp"} までお問い合わせください。
+  p
+    | クレジットカード情報は当社のサーバーには保存せず、
+    = link_to "Stripe.com", "https://stripe.com/docs/security/stripe", target: "_blank"
+    | を使用して安全に取り扱っています。
