--- a/app/views/card/new.html.slim
+++ b/app/views/card/new.html.slim
@@ -2,14 +2,12 @@
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title = title
 
-.page-body
-  .container
-    .a-card.auth-form.is-sign-up.a-card.is-in-app
-      header.auth-form__header
-        h1.auth-form__title クレジットカード登録
-      .auth-form__body
-        = render "form", action: :new
-    = render "notice"
+.a-card.auth-form.is-sign-up.a-card.is-in-app
+  header.auth-form__header
+    h1.auth-form__title クレジットカード登録
+  .auth-form__body
+    = render "form", action: :new
+= render "notice"
