--- a/app/views/card/show.html.slim
+++ b/app/views/card/show.html.slim
@@ -2,21 +2,20 @@
 
 header.page-header
   .container
-    .page-header__container
+    .page-header__inner
       h2.page-header__title = title
 
-.page-body
-  .container
-    .a-card.auth-form.is-sign-up.a-card.is-in-app
-      header.auth-form__header
-        h1.auth-form__title
-          | 登録済クレジットカード
-      .auth-form__body
-        .auth-form-items
-          .auth-form-item.is-text-align-center
-            | #{@card["brand"]} **** **** **** #{@card["last4"]} #{sprintf("%02d", @card["exp_month"].to_i)}/#{@card["exp_year"]}
-        .auth-form-action
-          ul.auth-form-action__items
-            li.auth-form-action__item
-              = link_to "編集", edit_card_path, class: "is-button-simple-lg-warning"
-    = render "notice"
+.a-card.auth-form.is-sign-up.a-card.is-in-app
+  header.auth-form__header
+    h1.auth-form__title
+      | 登録済クレジットカード
+  .auth-form__body
+    .auth-form-items
+      .auth-form-item
+        .a-text-input.is-inputed.is-align-center
+          | #{@card["brand"]} **** **** **** #{@card["last4"]} #{sprintf("%02d", @card["exp_month"].to_i)}/#{@card["exp_year"]}
+    .auth-form-action
+      ul.auth-form-action__items
+        li.auth-form-action__item
+          = link_to "カード変更", edit_card_path, class: "a-button is-lg is-warning is-block"
+= render "notice"
