--- a/app/views/reports/show.html.slim
+++ b/app/views/reports/show.html.slim
@@ -44,6 +44,18 @@ header.page-header
                 = @report.user.login_name
             time.thread-meta__created-at(datetime="#{@report.created_at.to_datetime}" pubdate="pubdate")
               | 書いた日 : #{l @report.updated_at}
+            .thread-meta__watch
+              .thread-meta__watch__button
+                - if current_user.id.in?(@report.watches.pluck(:user_id))
+                  = form_for @watch, url: watch_path, method: :delete, html: { class: "thread-meta__watch__form" } do |f|
+                    = hidden_field_tag :user_id, current_user.id
+                    = hidden_field_tag :report_id, @report.id
+                    = f.submit "Unwatch", class: "thread-meta__watch__form__action"
+                - else
+                  = form_for @watch, html: { class: "thread-meta__watch__form" } do |f|
+                    = hidden_field_tag :user_id, current_user.id
+                    = hidden_field_tag :report_id, @report.id
+                    = f.submit "Watch", class: "thread-meta__watch__form__action"
         - if @report.practices.present?
           .report-practices
             ul.report-practices__items
@@ -87,19 +99,6 @@ header.page-header
                 - else
                   = form_for @checks.last, url: check_path(@checks.last), method: :delete, html: { class: "report-check-form" } do |f|
                     = f.submit "日報の確認を取り消す", class: "thread-check-form__action is-text"
-
-        .thread-watch
-          .thread-watch__item
-            - if current_user.id.in?(@report.watches.pluck(:user_id))
-              = form_for @watch, url: watch_path, method: :delete, html: { class: "report-watch-form" } do |f|
-                = hidden_field_tag :user_id, current_user.id
-                = hidden_field_tag :report_id, @report.id
-                = f.submit "Unwatch", class: "report-watch-form__action is-text"
-            - else
-              = form_for @watch, html: { class: "report-watch-form" } do |f|
-                = hidden_field_tag :user_id, current_user.id
-                = hidden_field_tag :report_id, @report.id
-                = f.submit "Watch", class: "report-watch-form__action is-text"
 
       .thread-prev-next
         .thread-prev-next__item
