--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -27,6 +27,18 @@ header.page-header
               = @question.user.login_name
             time.thread-meta__created-at(datetime="#{@question.created_at.to_datetime}" pubdate="pubdate")
               = l @question.updated_at
+            .thread-meta__watch
+              .thread-meta__watch__button
+                - if current_user.id.in?(@question.watches.pluck(:user_id))
+                  = form_for @watch, url: watch_path, method: :delete, html: { class: "thread-meta__watch__form" } do |f|
+                    = hidden_field_tag :user_id, current_user.id
+                    = hidden_field_tag :question_id, @question.id
+                    = f.submit "Unwatch", class: "thread-meta__watch__form__action"
+                - else
+                  = form_for @watch, html: { class: "thread-meta__watch__form" } do |f|
+                    = hidden_field_tag :user_id, current_user.id
+                    = hidden_field_tag :question_id, @question.id
+                    = f.submit "Watch", class: "thread-meta__watch__form__action"
         - if @question.practice.present?
           .report-practices
             ul.report-practices__items
@@ -49,19 +61,6 @@ header.page-header
                   = link_to question_path(@question), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action a-button is-md is-danger is-block" do
                     i.fas.fa-trash-alt#delete
                     | 削除
-
-        .thread-watch
-          .thread-watch__item
-            - if current_user.id.in?(@question.watches.pluck(:user_id))
-              = form_for @watch, url: watch_path, method: :delete, html: { class: "question-watch-form" } do |f|
-                = hidden_field_tag :user_id, current_user.id
-                = hidden_field_tag :question_id, @question.id
-                = f.submit "Unwatch", class: "question-watch-form__action is-text"
-            - else
-              = form_for @watch, html: { class: "question-watch-form" } do |f|
-                = hidden_field_tag :user_id, current_user.id
-                = hidden_field_tag :question_id, @question.id
-                = f.submit "Watch", class: "question-watch-form__action is-text"
 
       = link_to @question.user, itempro: "url", class: "thread__author-link" do
         = image_tag @question.user.avatar_image(120), class: "thread__author-icon is-#{@question.user.role}"
