トップページの文言修正 画像のリンク切れ修正

--- a/app/views/welcome/_main_visual.slim
+++ b/app/views/welcome/_main_visual.slim
@@ -3,6 +3,6 @@
     .main-visual__inner
       .main-visual__contents
         h1.main-visual__title
-          | 現場目線のガチなプログラミングスクール
+          | 現場の即戦力になれるプログラミングスクール
         .main-visual__image-container
           = image_tag("logo-lg.svg", class: "main-visual__logo")
