--- a/app/views/welcome/tos.html.slim
+++ b/app/views/welcome/tos.html.slim
@@ -1,7 +1,7 @@
 header.welcome-page-header
   .container
     h1.welcome-page-header__title
-      = image_tag("tos-page-title", alt: "利用規約", class: "welcome-page-header__title-image")
+      = image_tag("tos-page-title.svn", alt: "利用規約", class: "welcome-page-header__title-image")
 
 .welcome-sections
   .welcome-section
