--- a/app/assets/stylesheets/welcome/_main-visual.sass
+++ b/app/assets/stylesheets/welcome/_main-visual.sass
@@ -16,7 +16,7 @@
   display: flex
   align-items: center
   +media-breakpoint-down(sm)
-    +padding(vertical, 1.5rem)
+    +padding(vertical, 1rem 1.5rem)
 
 .main-visual__contents
   max-width: 920px
@@ -46,4 +46,4 @@
   +text-block(1.5rem 1.4, $reversal-text center 700)
   font-feature-settings: "palt"
   +media-breakpoint-down(sm)
-    font-size: .9375rem
+    font-size: .8125rem
