拡張子ミス

--- a/app/views/welcome/practices.html.slim
+++ b/app/views/welcome/practices.html.slim
@@ -1,7 +1,7 @@
 .welcome-page-header
   .container
     h1.welcome-page-header__title
-      = image_tag("practices-page-title.svn", class: "welcome-page-header__title-image", alt: "学習内容")
+      = image_tag("practices-page-title.svg", class: "welcome-page-header__title-image", alt: "学習内容")
 
 section.welcome-section
   .container
