拡張子追加

--- a/app/views/welcome/pricing.html.slim
+++ b/app/views/welcome/pricing.html.slim
@@ -3,7 +3,7 @@
 .welcome-page-header
   .container
     h1.welcome-page-header__title
-      = image_tag("pricing-page-title", alt: "プログラミングスクールの料金", class: "welcome-page-header__title-image")
+      = image_tag("pricing-page-title.svg", alt: "プログラミングスクールの料金", class: "welcome-page-header__title-image")
 
 .welcome-sections
   section.welcome-section
