--- a/app/views/welcome/faq.html.slim
+++ b/app/views/welcome/faq.html.slim
@@ -3,5 +3,5 @@
 .welcome-page-header
   .container
     h1.welcome-page-header__title
-      = image_tag("faq-page-title", class: "welcome-page-header__title-image")
+      = image_tag("faq-page-title.svg", class: "welcome-page-header__title-image")
 = render "faq"
