--- a/app/views/card/_notice.html.slim
+++ b/app/views/card/_notice.html.slim
@@ -1,7 +1,6 @@
 .form-notice
-  - unless current_user.card
-    p
-      | クレジットカード登録後、すぐにフィヨルドブートキャンプ利用開始になります。
+  - unless current_user.card?
+    p クレジットカード登録後、すぐにフィヨルドブートキャンプ利用開始になります。
   p
     | クレジットカード登録日を含む3日間はお試し期間です。お試し期間の間に退会をすれば課金されることはありません（
     = link_to "退会はこちらから", new_user_retirement_path(current_user)
