--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,6 +15,7 @@ html.is-application lang="ja"
         link(rel="canonical" href="https://bootcamp.fjord.jp/")
     - else
       = render "current_user"
+      = render "stripe"
       = stylesheet_link_tag "application", media: "all"
       = stylesheet_link_tag "//cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css"
       = render "import_prism"
