Markdownをサポートするテキストエリアに補完機能を追加
- [機能追加] @をタイプするとログイン名を補完
- [機能追加] :をタイプすると絵文字を補完
- [機能追加] Markdownの表示時に@ログイン名をリンクに変更
- [バグ修正] お知らせでコメントするとエラーになる問題を修正

注意

- プレビューは別ライブラリの機能のため、変更なし
- @ログイン名の補完やリンクは日本語や記号が含まれている場合、非サポート
- ログイン名や絵文字は全件取得しているため、パフォーマンスの問題があった場合は要調整

--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -36,7 +36,7 @@ header.page-header
                 = link_to @question.practice, class: "report-practices__item-link" do
                   = @question.practice.title
         .thread__body
-          .thread__description.js-markdown-view.js-target-blank.is-long-text.js-markdown
+          .thread__description.js-markdown-view.js-target-blank.is-long-text
             = @question.description
           = render "reactions/reactions", reactionable: @question
         - if @question.user_id == current_user.id
