学習内容のtypo修正

--- a/app/views/welcome/practices.html.slim
+++ b/app/views/welcome/practices.html.slim
@@ -41,13 +41,13 @@ section.welcome-section
                   | PC性能の見方を知る
               tr
                 td
-                  | PC性能の見方を知る
+                  | Terminalの基本を覚える
               tr
                 td
                   | macOSをクリーンインストールする
               tr
                 td
-                  | macOSをクリーンインストールする
+                  | macOSの開発環境を作る
         .col-xs-12.col-md-4
           .welcome-small-section
             h3.welcome-small-section__title
@@ -265,7 +265,7 @@ section.welcome-section
             table.welcome-table
               tr
                 td
-                  | Javascript の基本を理解する
+                  | JavaScript の基本を理解する
               tr
                 td
                   | jQuery の基本を理解する
