--- a/app/assets/stylesheets/blocks/report/_learning-times.sass
+++ b/app/assets/stylesheets/blocks/report/_learning-times.sass
@@ -1,17 +1,21 @@
 .learning-times
-  +padding(vertical, .75rem)
-  +padding(horizontal, 2rem)
   border-bottom: solid 1px $border
+  +media-breakpoint-up(md)
+    +padding(vertical, .75rem)
+    +padding(horizontal, 2rem)
+    display: flex
   +media-breakpoint-down(sm)
+    +padding(vertical, .5rem)
     +padding(horizontal, 1rem)
 
 .learning-times__header
-  font-size: .875rem
-  margin-bottom: .25rem
   display: flex
   align-items: center
+  +media-breakpoint-up(md)
+    white-space: nowrap
+    margin-right: .5rem
   +media-breakpoint-down(sm)
-    font-size: .8125rem
+    margin-bottom: .25rem
 
 .learning-times__title
   +text-block(.8125rem 1.4, 600)
