--- a/app/views/welcome/_welcome_header.html.slim
+++ b/app/views/welcome/_welcome_header.html.slim
@@ -26,6 +26,14 @@ header.welcome-header
           li.welcome-header-nav__item
             = link_to new_user_path, class: "welcome-header-nav__item-link" do
               | 参加登録
+          li.welcome-header-nav__item.is-hidden-md-up
+            - if current_user
+              = link_to course_practices_path(current_user.course), class: "welcome-header-nav__item-link" do
+                | プラクティス
+            - else
+              = link_to "/login", class: "welcome-header-nav__item-link" do
+                | ログイン
+
         label.welcome-header-nav__overlay(for="welcome-mobile-nav")
       .welcome-header__login
         - if current_user
