--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -20,14 +20,10 @@
     .thread-comment__description.js-markdown-view.js-target-blank.is-long-text
       = answer.description
     = render "reactions/reactions", reactionable: answer
-    footer.card-footer
-      .card-footer-actions
-        ul.card-footer-actions__items
-          - if correct_answer.blank? && answer != correct_answer && (current_user == question.user || admin_login?)
-            li.card-footer-actions__item
-              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: "a-button is-md is-warning is-block" do
-                | 解決にする
-          - if answer.user == current_user
+    - if answer.user == current_user
+      footer.card-footer
+        .card-footer-actions
+          ul.card-footer-actions__items
             li.card-footer-actions__item
               = link_to edit_question_answer_path(answer.question, answer, return_to: question_url(answer.question)), class: "card-footer-actions__action a-button is-md is-primary is-block", id: "js-shortcut-edit" do
                 i.fas.fa-pen#new
@@ -36,7 +32,13 @@
               = link_to question_answer_path(answer.question, answer, return_to: question_url(answer.question)), data: { confirm: "本当によろしいですか？" }, method: :delete, class: "card-footer-actions__action a-button is-md is-danger is-block" do
                 i.fas.fa-trash-alt#delete
                 | 削除
-          - if correct_answer.present? && answer == correct_answer && (current_user == question.user || admin_login?)
-            li.card-footer-actions__item
-              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :patch do
-                | ベストアンサーを取り消す
+    - if current_user == question.user || admin_login?
+      .thread-admin-tools
+        ul.thread-admin-tools__items
+          li.thread-admin-tools__item
+            - if correct_answer.blank? && answer != correct_answer
+              = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :post, class: "a-button is-md is-warning is-block" do
+                | 解決にする
+            - if correct_answer.present? && answer == correct_answer
+                = link_to question_correct_answer_path(answer.question, answer_id: answer.id, return_to: question_path(answer.question)), data: { confirm: "本当に宜しいですか？" }, method: :patch, class: "thread-check-form__action is-text" do
+                  | ベストアンサーを取り消す
