--- a/app/views/answers/_form.html.slim
+++ b/app/views/answers/_form.html.slim
@@ -16,4 +16,4 @@
         .js-preview.is-long-text.thread-comment-form__preview
     .thread-comment-form__action
       - comment_label = answer.persisted? ? "保存する" : "コメントする"
-      = f.submit comment_label, class: "a-button is-lg is-warning"
+      = f.submit comment_label, class: "a-button is-lg is-warning is-block"
