デザイン崩れを修正

--- a/app/views/courses/_form.html.slim
+++ b/app/views/courses/_form.html.slim
@@ -27,4 +27,4 @@
       li.form-actions__item
         = link_to "キャンセル", :back, class: "a-button is-md is-secondary"
       li.form-actions__item
-        button.a-button is-lg is-warning 内容を保存
+        button.a-button.is-lg.is-warning 内容を保存
